Changed threshold of genModel back to 30
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@137 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/doc/MMSA.Rnw
+++ b/pkg/inst/doc/MMSA.Rnw
@@ -709,8 +709,8 @@ validation <- validateModels(db, modelDir="models", rank="phylum",
     table="NSV", pctTest=.1)
 head(validation$scores)
 head(validation$prediction)
-table(classification$prediction[,"actual"], 
-    classification$prediction[,"predicted"])
+table(validation$prediction[,"actual"], 
+    validation$prediction[,"predicted"])
 @
 
 
