Moved some functions to their individual files
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@142 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/doc/MMSA.Rnw
+++ b/pkg/inst/doc/MMSA.Rnw
@@ -610,9 +610,9 @@ using \func{plot}.
 <<EMM_1, fig=TRUE, include=FALSE>>=
 plot(model)
 @
-<<EMM_2, fig=TRUE, include=FALSE>>=
-plot(model, method="MDS")
-@
+%<<EMM_2, fig=TRUE, include=FALSE>>=
+%plot(model, method="MDS")
+%@
 <<EMM_3, fig=TRUE, include=FALSE>>=
 plot(model, method="graph")
 @
