--- a/pkg/inst/doc/MMSA.Rnw
+++ b/pkg/inst/doc/MMSA.Rnw
@@ -418,24 +418,15 @@ Figure~\ref{fig:ER_Diag} and stores it in the file example.sqlite.  If a
 GenDB already exists, then it can be opened using
 \func{openGenDB}.
 
-The next step is to import sequences into the database by reading FASTA files.  
-Since metadata in FASTA files is not standardized, we provide several reader
-functions. For example, we provide the reader
-function \func{addSequencesGreengenes}
-for FASTA files from the Greengenes project,
-which will automatically extract the classification and sequence information 
-and adds it to the database.
-For each sequence, the header information will be parsed and stored in the
-appropriate columns of the Classification table. The sequence information
-will be stored in the Sequences table.
-Each sequence also has a unique ID which will be used as 
-the primary key in all tables.
-
-As
-of now, we have implemented the reader for Greengenes format FASTA files, and
-work is in progress to develop more readers for NCBI format FASTA files. 
-
-{\bf FIXME: We need to isolate the meta data reader and explain how to create a new one for a different format!}
+The next step is to import sequences into the database by reading FASTA files. 
+This is accomplished by function \func{addSequences}. 
+This function automatically
+extracts the classification information from the FASTA file's 
+description lines.
+The default is to expect 
+classification in the format used by the Greengenes project,
+however other meta data readers can be implemented (see manual page
+for addSequences).
 
 The command below uses a FASTA file provided by the package, hence we use
 \func{system.file} instead of just a string with the file name.
@@ -494,10 +485,29 @@ in our example data base contain
 organisms from \Sexpr{nrow(getRank(db, rank="order"))} different orders. 
 We can obtain the rank name for each sequence individually by using
 \code{all=TRUE}. The folowing code counts how many sequences we have 
-for each order.
+for each genus.
 <<>>=
-table(getRank(db, rank="Order", all=TRUE))
+table(getRank(db, rank="Genus", all=TRUE))
 @
+
+This informartion can be easily turned into a barplot showing the abundance
+of different orders in the data database (see Figure~\ref{fig:abundanceplot}).
+
+<<abundanceplot, fig=TRUE, include=FALSE>>=
+oldpar <- par(mar=c(12,5,5,5)) ### make space for labels
+barplot(sort(
+    table(getRank(db, rank="Genus", all=TRUE)), 
+    decreasing=TRUE), las=2)
+par(oldpar)
+@
+
+\begin{figure}
+\centering
+\includegraphics[width=.8\linewidth]{MMSA-abundanceplot}
+\caption{Abundance of different orders in the database.}
+\label{fig:abundanceplot}
+\end{figure}
+
 
 Filtering also works for \func{getRank}.
 For example, we can find the genera within the order
@@ -511,6 +521,24 @@ Note that partial matching is performed from ``Thermo'' to
 ``Thermoanaerobacterales.'' Partial matching is available for ranks and 
 names in most operations in \pkg{MMSA}.
 
+We can also get the complete classification hierarchy for different ranks 
+down to individual sequences. In the following we get the classification
+hierarchy for genus Thermaerobacter, then all orders matching Therm and
+then for a list of names. 
+<<>>=
+getHierarchy(db, rank="Genus", name="Thermaerobacter")
+
+getHierarchy(db, rank="Genus", name="Therm")
+
+getHierarchy(db, rank="Genus", name=c("Acid", "Thermo"))
+@
+
+To get individual sequences we can use again the unique sequence id.
+
+<<>>=
+getHierarchy(db, rank="id", name="1250")
+@
+
 
 \subsection{Converting Sequences to NSV}
 In order to create position sensitive $p$-mer clustering models, we need to
@@ -519,7 +547,7 @@ easily convert large number of sequences in the database to NSV format and
 store them in the same database. The following command will convert all
 the sequences to NSV format  and store them in a table called NSV.
 <<>>=
-createNSVTable(db, tableName = "NSV")
+createNSVTable(db, table = "NSV")
 @
 
 In the function call above we used the default values for most of the
@@ -527,7 +555,7 @@ parameters such as word, overlap, and last\_window.  Custom parameter settings
 and filter
 criteria can be easily specified in the following way:
 <<>>=
-createNSVTable(db, tableName = "NSV_genus_Thermosinus", 
+createNSVTable(db, table = "NSV_genus_Thermosinus", 
     rank = "genus", name = "Thermosinus", 
     window = 100, overlap = 0, word = 3, last_window = FALSE)
 db
@@ -554,17 +582,21 @@ The annotation column contains information about how the NSVs were created.
 
 
 The sequences in the NSV tables can be queried and filtered
-using \func{getSequences} in the same way as regular sequences. 
+using \func{getSequences} in the same way as regular sequences, however,
+the result is an object of class NSVSet.
 <<>>=
 NSVs <- getSequences(db, rank="Genus", name="Desulfosporomusa", table="NSV")
 NSVs
+@
+
+<<>>=
 length(NSVs)
 names(NSVs)
 @
 
 The code above selects the NSVs for the genus ``Desulfosporomusa'' in
 table NSV. Note sequences of NSVs are not strings like the original
-sequences but tables of $p$-mer counts and thus are stored in a
+sequences but tables of $p$-mer counts and thus are stored internally in a
 list. The code below shows the dimensions of the NSV table 
 for the first sequence and then shows the first 2 rows and 16 columns 
 of the table.
@@ -572,6 +604,23 @@ of the table.
 dim(NSVs[[1]])
 NSVs[[1]][1:5,1:16]
 @
+
+However, regular subsetting is also implemented on NSVSets. For example,
+we can directly select for the first five sequences the first segment
+and then create a barplot showing the $p$-mer frequencies including
+wiskers for the minimum and maximum appearance in sequences.
+<<NSVplot,  fig=TRUE, include=FALSE, width=12>>=
+NSVs[1:5,1]
+plot(NSVs[1:5,1])
+@
+
+\begin{figure}
+\centering
+\includegraphics[width=\linewidth]{MMSA-NSVplot}
+\caption{$p$-mer frequency plot.}
+\label{fig:-NSVplot}
+\end{figure}
+
 
 Finally, we can close a GenDB after we are done working with it. The database
 can later be reopened using \func{openGenDB}.
